issue-664-ctas fix wrapping arrow on default CTA

--- a/elements/pfe-cta/demo/demo.css
+++ b/elements/pfe-cta/demo/demo.css
@@ -32,7 +32,7 @@
   }
 
   .force-wrap {
-      max-width: 200px;
+      max-width: 231px;
   }
 
   .card-layout {
